Add global variables; Add styles to navigation

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import './globals.scss';
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -13,5 +14,11 @@ body {
 #root {
   width: 100%;
   height: 100%;
-  background-color: #ccc;
+  background: rgb(22, 22, 23);
+  background: linear-gradient(180deg, rgba(22, 22, 23, 1) 0%, rgba(35, 35, 37, 1) 15%, rgba(48, 55, 55, 1) 100%);
+  color: $text;
+
+  main {
+    padding: 2rem;
+  }
 }
