Add new global variables

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,2 +1,7 @@
-$orange: #f66a23;
+$orange: #ff5722;
+$red: #d32f2f;
 $text: #f1eeee;
+$font-family: 'Montserrat', sans-serif;
+$padding: 2rem;
+$row-gap: 1rem;
+$column-gap: 1rem;
