--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 @import './globals.scss';
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: $font-family;
   width: 100vw;
   height: 100vh;
 }
@@ -14,11 +14,36 @@ body {
 #root {
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr;
   background: rgb(22, 22, 23);
-  background: linear-gradient(180deg, rgba(22, 22, 23, 1) 0%, rgba(35, 35, 37, 1) 15%, rgba(48, 55, 55, 1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(22, 22, 23, 1) 0%,
+    rgba(35, 35, 37, 1) 15%,
+    rgba(48, 55, 55, 1) 100%
+  );
   color: $text;
 
   main {
-    padding: 2rem;
+    padding: $padding;
+    background: inherit;
+
+    & > div {
+      width: 100%;
+      height: 100%;
+    }
+
+    @media (max-width: 576px) {
+      padding: $padding calc($padding / 2);
+    }
+  }
+}
+
+a {
+  color: $text;
+
+  &:hover {
+    color: $orange;
   }
 }
