--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ body {
   font-family: $font-family;
   width: 100vw;
   height: 100vh;
+  background-color: $grey;
 }
 
 * {
@@ -16,13 +17,7 @@ body {
   height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
-  background: rgb(22, 22, 23);
-  background: linear-gradient(
-    180deg,
-    rgba(22, 22, 23, 1) 0%,
-    rgba(35, 35, 37, 1) 15%,
-    rgba(48, 55, 55, 1) 100%
-  );
+  background: $bg-linear-gradient;
   color: $text;
 
   main {
@@ -46,4 +41,28 @@ a {
   &:hover {
     color: $orange;
   }
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+$scroll-color: #2a2929;
+$scroll-background: #555;
+// scrollbar
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  border-radius: $border-radius;
+  background: $scroll-background;
+}
+::-webkit-scrollbar-thumb {
+  background: $scroll-color;
+  border-radius: $border-radius;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #2a2929;
 }
