--- a/src/App.scss
+++ b/src/App.scss
@@ -22,15 +22,18 @@ body {
 
   main {
     padding: $padding;
-    background: inherit;
 
     & > div {
       width: 100%;
       height: 100%;
     }
 
-    @media (max-width: 576px) {
+    @media (max-width: $md) {
       padding: $padding calc($padding / 2);
+    }
+    @media (min-width: $xxl) {
+      max-width: $xxl;
+      margin: 0 auto;
     }
   }
 }
@@ -40,6 +43,12 @@ a {
 
   &:hover {
     color: $orange;
+  }
+}
+
+ul {
+  li {
+    padding-bottom: $row-gap;
   }
 }
 
