--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import './globals.scss';
 
+html {
+  height: 100%;
+  background: $bg-linear-gradient;
+  background-attachment: fixed;
+}
+
 body {
   font-family: $font-family;
   width: 100vw;
-  height: 100vh;
-  background-color: $grey;
+  min-height: 100%;
 }
 
 * {
@@ -17,7 +22,6 @@ body {
   height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
-  background: $bg-linear-gradient;
   color: $text;
 
   main {
