--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,7 @@ body {
       padding: $padding calc($padding / 2);
     }
     @media (min-width: $xxl) {
+      width: 100%;
       max-width: $xxl;
       margin: 0 auto;
     }
@@ -50,7 +51,8 @@ a {
   }
 }
 
-ul {
+ul,
+ol {
   li {
     padding-bottom: $row-gap;
   }
