Add delete user feature; Rename file in services user.ts -> users.ts

--- a/src/pages/Users/Users.module.scss
+++ b/src/pages/Users/Users.module.scss
@@ -24,6 +24,19 @@
       td,
       th {
         color: $text;
+
+        .delete {
+          &:hover {
+            svg {
+              color: $red;
+              cursor: pointer;
+              scale: 1.1;
+            }
+          }
+          svg {
+            width: 1.5rem;
+          }
+        }
       }
     }
   }
