--- a/src/globals.scss
+++ b/src/globals.scss
@@ -2,6 +2,7 @@ $orange: #ff5722;
 $red: #d32f2f;
 $green: #1e9a29;
 $blue: #0183ff;
+$yellow: #ffc107;
 $text: #f1eeee;
 $grey: #2a2929;
 $light-grey: #5b5a5a;
