Recipes and Products: show favorites button

--- a/src/features/RecipeList/RecipeList.module.scss
+++ b/src/features/RecipeList/RecipeList.module.scss
@@ -5,6 +5,12 @@
   flex-direction: column;
   row-gap: $row-gap;
 
+  .controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   & > a {
     align-self: flex-end;
   }
